--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite</title>
-    <script type="module" crossorigin src="./assets/index.7ecda7c5.js"></script>
-    <link rel="stylesheet" href="./assets/index.92d44bef.css" />
+    <script type="module" crossorigin src="/assets/index.b5aaa765.js"></script>
+    <link rel="stylesheet" href="/assets/index.0443c784.css">
   </head>
 
   <body>
     <div id="app"></div>
+    
   </body>
 </html>
